Fix UpdateClient XML serialization when <disabled> reasons are present.

The buggy code serializes the <disabled> tag before closing the
<app> tag, like this:

<app appid=...version="0.9" brand="TEST" enabled="0"<disabled reason="0"/>

Bug: 901497
Change-Id: I2106ee35e99dd9c7fa66baab0c0efdc4942cab05
Reviewed-on: https://chromium-review.googlesource.com/c/1316441
Reviewed-by: Minh Nguyen <mxnguyen@chromium.org>
Commit-Queue: Sorin Jianu <sorin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605113}
Former-commit-id: 05d610bfffc6a715c4d4aece4461032af065402d